--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div>
 
-                <img src="Images/oferta.png" alt="Esto es una imagen" class="imagenResponsive" width="600" height="400">
+                <img src="oferta.png" alt="Esto es una imagen" class="imagenResponsive" width="600" height="400">
 
             </div>
 
