--- a/index.html
+++ b/index.html
@@ -36,20 +36,6 @@
                 <p>Carrilleras al vino tinto ............. 2.00€</p>
                 <p>Costillas a la miel ............. 2.00€</p>
                 <p>Albondigas guisadas ............. 2.00€</p>
-
-                <br>
-                <br>
-                <br>
-                <br>
-
-                <h3>Bebidas</h3>
-
-                <p>CocaCola ............. 2.00€</p>
-                <p>Cerveza ............. 2.00€</p>
-                <p>Fanta Naranja/Limón ............. 2.00€</p>
-                <p>Nestea ............. 2.00€</p>
-                <p>Zumos ............. 2.00€</p>
-                <p>Acuarius ............. 2.00€</p>
             
             </div>
 
@@ -72,7 +58,20 @@
                 <br>
                 <br>
                 <br>
+            </div>
+            
+            <div class="grid-item">
+                <h3>Bebidas</h3>
 
+                <p>CocaCola ............. 2.00€</p>
+                <p>Cerveza ............. 2.00€</p>
+                <p>Fanta Naranja/Limón ............. 2.00€</p>
+                <p>Nestea ............. 2.00€</p>
+                <p>Zumos ............. 2.00€</p>
+                <p>Acuarius ............. 2.00€</p>              
+
+            </div>
+            <div class="grid-item">
                 <h3>Postres</h3>
 
                 <p>Helado de pato ............. 2.00€</p>
@@ -89,7 +88,17 @@
 
             <div>
 
-                <img src="oferta.png" alt="Esto es una imagen" class="imagenResponsive" width="600" height="400">
+                <!--<img src="Images/oferta.png" alt="Esto es una imagen" class="imagenResponsive" width="600" height="400">-->
+
+                <aside class="responsive-banner">
+                    <span class="circle-a"></span>
+                    <span class="circle-b"></span>
+                    <img src="Images/oferta.png">
+                    <div class="container-envelope">
+                        <h2 style="text-align: center; color: black;">Si desea una buena alimentación DuckDonald's, la mejor opción!</h2>
+                        <h3 style="text-align: center;"><a href="">Pincha aquí</a></h3>
+                    </div>
+                </aside>
 
             </div>
 
