--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <aside class="responsive-banner">
                     <span class="circle-a"></span>
                     <span class="circle-b"></span>
-                    <img src="Images/oferta.png">
+                    <img src="oferta.png">
                     <div class="container-envelope">
                         <h2 style="text-align: center; color: black;">Si desea una buena alimentación DuckDonald's, la mejor opción!</h2>
                         <h3 style="text-align: center;"><a href="">Pincha aquí</a></h3>
